--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "~1.7.4",
-    "@angular/compiler-cli": "^5.2.0",    
     "@angular/animations": "^5.2.0",
+    "@angular/cli": "~1.7.4",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
+    "@angular/compiler-cli": "^5.2.0",
     "@angular/core": "^5.2.0",
     "@angular/forms": "^5.2.0",
     "@angular/http": "^5.2.0",
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "body-parser": "^1.18.2",
+    "config": "^1.30.0",
     "core-js": "^2.4.1",
     "cors": "^2.8.4",
     "express": "^4.16.3",
@@ -57,5 +58,5 @@
   "engines": {
     "node": "8.9.4",
     "npm": "5.6.0"
-  }  
+  }
 }
