--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "angular2-flash-messages": "^2.0.5",
     "body-parser": "^1.18.2",
     "config": "^1.30.0",
     "core-js": "^2.4.1",
