--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "core-js": "^2.4.1",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "express-list-routes": "^0.1.4",
     "mongoose": "^5.0.14",
     "rxjs": "^5.5.6",
     "typescript": "~2.5.3",
